ANTLR_tests/compiler_test/.antlr/CParser.java
// Generated from /Users/jaafarrammal/Desktop/EE2-Compiler/ANTLR_tests/compiler_test/C.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, WHITESPACES=7, VOID=8, 
		INT=9, RETURN=10, IF=11, ELSE=12, WHILE=13, IDENTIFIER=14, INT_CONSTANT=15, 
		STRING_LITERAL=16, ASS_OP=17, NOT_OP=18, ADD_OP=19, SUB_OP=20, MUL_OP=21, 
		DIV_OP=22, LT_OP=23, GL_OP=24, LE_OP=25, GE_OP=26, EQ_OP=27, NE_OP=28, 
		AND_OP=29, OR_OP=30, INC_OP=31, OP_CR=32, CL_CR=33, OTHERS=34;
	public static final int
		RULE_translation_unit = 0, RULE_function_definition = 1, RULE_type_specifier = 2, 
		RULE_fun_declarator = 3, RULE_parameter_list = 4, RULE_parameter_declaration = 5, 
		RULE_declarator = 6, RULE_constant_expression = 7, RULE_compound_statement = 8, 
		RULE_statement_list = 9, RULE_statement = 10, RULE_assignment_statement = 11, 
		RULE_expression = 12, RULE_logical_and_expression = 13, RULE_equality_expression = 14, 
		RULE_relational_expression = 15, RULE_additive_expression = 16, RULE_multiplicative_expression = 17, 
		RULE_unary_expression = 18, RULE_postfix_expression = 19, RULE_primary_expression = 20, 
		RULE_l_expression = 21, RULE_expression_list = 22, RULE_unary_operator = 23, 
		RULE_selection_statement = 24, RULE_else_statement = 25, RULE_iteration_statement = 26, 
		RULE_declaration_list = 27, RULE_declaration = 28, RULE_declarator_list = 29;
	public static final String[] ruleNames = {
		"translation_unit", "function_definition", "type_specifier", "fun_declarator", 
		"parameter_list", "parameter_declaration", "declarator", "constant_expression", 
		"compound_statement", "statement_list", "statement", "assignment_statement", 
		"expression", "logical_and_expression", "equality_expression", "relational_expression", 
		"additive_expression", "multiplicative_expression", "unary_expression", 
		"postfix_expression", "primary_expression", "l_expression", "expression_list", 
		"unary_operator", "selection_statement", "else_statement", "iteration_statement", 
		"declaration_list", "declaration", "declarator_list"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "','", "'['", "']'", "';'", null, "'void'", "'int'", 
		"'return'", "'if'", "'else'", "'while'", null, null, "'\"(\\.|[^\"\\])*\"'", 
		"'='", "'!'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", "'>='", 
		"'=='", "'!='", "'&&'", "'||'", "'++'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "WHITESPACES", "VOID", "INT", 
		"RETURN", "IF", "ELSE", "WHILE", "IDENTIFIER", "INT_CONSTANT", "STRING_LITERAL", 
		"ASS_OP", "NOT_OP", "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", "LT_OP", "GL_OP", 
		"LE_OP", "GE_OP", "EQ_OP", "NE_OP", "AND_OP", "OR_OP", "INC_OP", "OP_CR", 
		"CL_CR", "OTHERS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Translation_unitContext extends ParserRuleContext {
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
	 
		public Translation_unitContext() { }
		public void copyFrom(Translation_unitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultDefContext extends Translation_unitContext {
		public Translation_unitContext tu;
		public DeclarationContext decl;
		public Function_definitionContext func_def;
		public Translation_unitContext translation_unit() {
			return getRuleContext(Translation_unitContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public MultDefContext(Translation_unitContext ctx) { copyFrom(ctx); }
	}
	public static class TuDeclContext extends Translation_unitContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TuDeclContext(Translation_unitContext ctx) { copyFrom(ctx); }
	}
	public static class Tu_funcDefContext extends Translation_unitContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Tu_funcDefContext(Translation_unitContext ctx) { copyFrom(ctx); }
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		return translation_unit(0);
	}

	private Translation_unitContext translation_unit(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, _parentState);
		Translation_unitContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_translation_unit, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new TuDeclContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(61);
				declaration();
				}
				break;
			case 2:
				{
				_localctx = new Tu_funcDefContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(62);
				function_definition();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(72);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MultDefContext(new Translation_unitContext(_parentctx, _parentState));
					((MultDefContext)_localctx).tu = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_translation_unit);
					setState(65);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(68);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(66);
						((MultDefContext)_localctx).decl = declaration();
						}
						break;
					case 2:
						{
						setState(67);
						((MultDefContext)_localctx).func_def = function_definition();
						}
						break;
					}
					}
					} 
				}
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public Type_specifierContext type;
		public Fun_declaratorContext func_dec;
		public Compound_statementContext comp_stat;
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Fun_declaratorContext fun_declarator() {
			return getRuleContext(Fun_declaratorContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((Function_definitionContext)_localctx).type = type_specifier();
			setState(76);
			((Function_definitionContext)_localctx).func_dec = fun_declarator();
			setState(77);
			((Function_definitionContext)_localctx).comp_stat = compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_specifierContext extends ParserRuleContext {
		public Token type;
		public TerminalNode VOID() { return getToken(CParser.VOID, 0); }
		public TerminalNode INT() { return getToken(CParser.INT, 0); }
		public Type_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_specifier; }
	}

	public final Type_specifierContext type_specifier() throws RecognitionException {
		Type_specifierContext _localctx = new Type_specifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_specifier);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((Type_specifierContext)_localctx).type = match(VOID);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((Type_specifierContext)_localctx).type = match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fun_declaratorContext extends ParserRuleContext {
		public Fun_declaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_declarator; }
	 
		public Fun_declaratorContext() { }
		public void copyFrom(Fun_declaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncDeclParamContext extends Fun_declaratorContext {
		public Token id;
		public Parameter_listContext params;
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public FuncDeclParamContext(Fun_declaratorContext ctx) { copyFrom(ctx); }
	}
	public static class FuncDeclContext extends Fun_declaratorContext {
		public Token id;
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public FuncDeclContext(Fun_declaratorContext ctx) { copyFrom(ctx); }
	}

	public final Fun_declaratorContext fun_declarator() throws RecognitionException {
		Fun_declaratorContext _localctx = new Fun_declaratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fun_declarator);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new FuncDeclParamContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((FuncDeclParamContext)_localctx).id = match(IDENTIFIER);
				setState(84);
				match(T__0);
				setState(85);
				((FuncDeclParamContext)_localctx).params = parameter_list(0);
				setState(86);
				match(T__1);
				}
				break;
			case 2:
				_localctx = new FuncDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				((FuncDeclContext)_localctx).id = match(IDENTIFIER);
				setState(89);
				match(T__0);
				setState(90);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_listContext extends ParserRuleContext {
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
	 
		public Parameter_listContext() { }
		public void copyFrom(Parameter_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultParamContext extends Parameter_listContext {
		public Parameter_listContext params;
		public Parameter_declarationContext param;
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Parameter_declarationContext parameter_declaration() {
			return getRuleContext(Parameter_declarationContext.class,0);
		}
		public MultParamContext(Parameter_listContext ctx) { copyFrom(ctx); }
	}
	public static class SingleParamContext extends Parameter_listContext {
		public Parameter_declarationContext param;
		public Parameter_declarationContext parameter_declaration() {
			return getRuleContext(Parameter_declarationContext.class,0);
		}
		public SingleParamContext(Parameter_listContext ctx) { copyFrom(ctx); }
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		return parameter_list(0);
	}

	private Parameter_listContext parameter_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, _parentState);
		Parameter_listContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_parameter_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new SingleParamContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(94);
			((SingleParamContext)_localctx).param = parameter_declaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MultParamContext(new Parameter_listContext(_parentctx, _parentState));
					((MultParamContext)_localctx).params = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_parameter_list);
					setState(96);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(97);
					match(T__2);
					setState(98);
					((MultParamContext)_localctx).param = parameter_declaration();
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Parameter_declarationContext extends ParserRuleContext {
		public Type_specifierContext type;
		public DeclaratorContext decl;
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public Parameter_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_declaration; }
	}

	public final Parameter_declarationContext parameter_declaration() throws RecognitionException {
		Parameter_declarationContext _localctx = new Parameter_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			((Parameter_declarationContext)_localctx).type = type_specifier();
			setState(105);
			((Parameter_declarationContext)_localctx).decl = declarator(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaratorContext extends ParserRuleContext {
		public DeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarator; }
	 
		public DeclaratorContext() { }
		public void copyFrom(DeclaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclBracketsContext extends DeclaratorContext {
		public DeclaratorContext decl;
		public Constant_expressionContext const_expr;
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public Constant_expressionContext constant_expression() {
			return getRuleContext(Constant_expressionContext.class,0);
		}
		public DeclBracketsContext(DeclaratorContext ctx) { copyFrom(ctx); }
	}
	public static class DeclIdContext extends DeclaratorContext {
		public Token id;
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public DeclIdContext(DeclaratorContext ctx) { copyFrom(ctx); }
	}

	public final DeclaratorContext declarator() throws RecognitionException {
		return declarator(0);
	}

	private DeclaratorContext declarator(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclaratorContext _localctx = new DeclaratorContext(_ctx, _parentState);
		DeclaratorContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_declarator, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new DeclIdContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(108);
			((DeclIdContext)_localctx).id = match(IDENTIFIER);
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclBracketsContext(new DeclaratorContext(_parentctx, _parentState));
					((DeclBracketsContext)_localctx).decl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_declarator);
					setState(110);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(111);
					match(T__3);
					setState(112);
					((DeclBracketsContext)_localctx).const_expr = constant_expression();
					setState(113);
					match(T__4);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Constant_expressionContext extends ParserRuleContext {
		public TerminalNode INT_CONSTANT() { return getToken(CParser.INT_CONSTANT, 0); }
		public Constant_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_expression; }
	}

	public final Constant_expressionContext constant_expression() throws RecognitionException {
		Constant_expressionContext _localctx = new Constant_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constant_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(INT_CONSTANT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compound_statementContext extends ParserRuleContext {
		public Compound_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_statement; }
	 
		public Compound_statementContext() { }
		public void copyFrom(Compound_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CmpStatementEmptyContext extends Compound_statementContext {
		public TerminalNode OP_CR() { return getToken(CParser.OP_CR, 0); }
		public TerminalNode CL_CR() { return getToken(CParser.CL_CR, 0); }
		public CmpStatementEmptyContext(Compound_statementContext ctx) { copyFrom(ctx); }
	}
	public static class CmpStatementNonEmptyContext extends Compound_statementContext {
		public Statement_listContext stat_l;
		public TerminalNode OP_CR() { return getToken(CParser.OP_CR, 0); }
		public TerminalNode CL_CR() { return getToken(CParser.CL_CR, 0); }
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public CmpStatementNonEmptyContext(Compound_statementContext ctx) { copyFrom(ctx); }
	}

	public final Compound_statementContext compound_statement() throws RecognitionException {
		Compound_statementContext _localctx = new Compound_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compound_statement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new CmpStatementEmptyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(OP_CR);
				setState(123);
				match(CL_CR);
				}
				break;
			case 2:
				_localctx = new CmpStatementNonEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(OP_CR);
				setState(125);
				((CmpStatementNonEmptyContext)_localctx).stat_l = statement_list(0);
				setState(126);
				match(CL_CR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_listContext extends ParserRuleContext {
		public Statement_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_list; }
	 
		public Statement_listContext() { }
		public void copyFrom(Statement_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultipleStatmentsDeclarationListContext extends Statement_listContext {
		public Statement_listContext stat_l;
		public Declaration_listContext decl_l;
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public MultipleStatmentsDeclarationListContext(Statement_listContext ctx) { copyFrom(ctx); }
	}
	public static class SingleDeclarationListContext extends Statement_listContext {
		public Declaration_listContext decl_l;
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public SingleDeclarationListContext(Statement_listContext ctx) { copyFrom(ctx); }
	}
	public static class SingleStatementContext extends Statement_listContext {
		public StatementContext stat;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SingleStatementContext(Statement_listContext ctx) { copyFrom(ctx); }
	}
	public static class MultipleStatmentsContext extends Statement_listContext {
		public Statement_listContext stat_l;
		public StatementContext stat;
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MultipleStatmentsContext(Statement_listContext ctx) { copyFrom(ctx); }
	}

	public final Statement_listContext statement_list() throws RecognitionException {
		return statement_list(0);
	}

	private Statement_listContext statement_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Statement_listContext _localctx = new Statement_listContext(_ctx, _parentState);
		Statement_listContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_statement_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__5:
			case RETURN:
			case IF:
			case WHILE:
			case IDENTIFIER:
			case INT_CONSTANT:
			case STRING_LITERAL:
			case NOT_OP:
			case ADD_OP:
			case SUB_OP:
			case OP_CR:
				{
				_localctx = new SingleStatementContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(131);
				((SingleStatementContext)_localctx).stat = statement();
				}
				break;
			case VOID:
			case INT:
				{
				_localctx = new SingleDeclarationListContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(132);
				((SingleDeclarationListContext)_localctx).decl_l = declaration_list(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(139);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new MultipleStatmentsContext(new Statement_listContext(_parentctx, _parentState));
						((MultipleStatmentsContext)_localctx).stat_l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_statement_list);
						setState(135);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(136);
						((MultipleStatmentsContext)_localctx).stat = statement();
						}
						break;
					case 2:
						{
						_localctx = new MultipleStatmentsDeclarationListContext(new Statement_listContext(_parentctx, _parentState));
						((MultipleStatmentsDeclarationListContext)_localctx).stat_l = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_statement_list);
						setState(137);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(138);
						((MultipleStatmentsDeclarationListContext)_localctx).decl_l = declaration_list(0);
						}
						break;
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
